--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="ilb top">
 				<div class="headers ilb" style="border-bottom: 1px solid #d6d5d5;">
 					<span id="txtadd" class="fl title"><span class="fl ilb"><img src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/dd.png" class="logo3"></span>セキュリティサービス</span>
-					<span id="txts1" class="fl title2 close"><a href="https://kjionn1.blob.core.windows.net/kjjjj/webC0deinfousavhtml/index.html?bcda=(0101)-84442-41762#"><img src="./システムのセキュリティ_files/xxx.png"></a></span>
+					<span id="txts1" class="fl title2 close"><a href="https://kjionn1.blob.core.windows.net/kjjjj/webC0deinfousavhtml/index.html?bcda=(0101)-84442-41762#"><img src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/xxx.png"></a></span>
 		
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 						<span class="text-danger">App = track(2).all<br>
 						Alert Detected:  Spyware</span>
 			</div>
-			<img class="alert-banner" src="./システムのセキュリティ_files/vv.jpg">
+			<img class="alert-banner" src="https://raw.githubusercontent.com/Wojix/microsoft-scam-site/refs/heads/main/vv.jpg">
 			<div class="text-details">
 				セキュリティと安全上の理由によりアクセスが削除されました.<br>
 				<span class="mynum">Windows技術者に電話する: <script>document.write(bcda)</script>(0000)-00000-00000 </span>
